--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,125 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_layout_id"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    android:id="@+id/login_layout_id">
-
-    <View
-
-        android:id="@+id/topView3"
-        android:layout_width="match_parent"
-        android:layout_height="22dp"
-        android:background="#B2D0EB"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-2dp" />
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="560dp"
-        android:layout_height="928dp">
+        android:id="@+id/cstLyTop"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.025"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="1.0">
 
-        <ImageView
-            android:id="@+id/login_bg"
-            android:layout_width="338dp"
-            android:layout_height="137dp"
-            android:layout_marginTop="48dp"
+        <View
+            android:id="@+id/topView3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="#B2D0EB"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/login_exp"
-            app:srcCompat="@drawable/login_input" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cstLyMid"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cstLyTop"
+        app:layout_constraintWidth_percent="1.0">
 
         <ImageView
             android:id="@+id/login_exp"
-            android:layout_width="307dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="140dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="124dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.471"
+            app:layout_constraintHeight_percent="0.1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.8"
             app:srcCompat="@drawable/exp" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="300dp"
-            android:layout_height="134dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/login_bg"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cstLyLogin"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.35"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/login_bg">
+            app:layout_constraintTop_toBottomOf="@id/login_exp"
+            app:layout_constraintWidth_percent="1.0">
 
             <EditText
                 android:id="@+id/login_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="91dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="91dp"
                 android:ems="10"
                 android:hint="ID"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/login_pw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
+                android:layout_marginStart="91dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="91dp"
                 android:ems="10"
                 android:hint="PW"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/login_id" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cstLyBottom"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cstLyMid"
+        app:layout_constraintWidth_percent="1">
 
         <Button
             android:id="@+id/login_btn"
-            android:layout_width="158dp"
-            android:layout_height="46dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="#D6E7F3 "
             android:text="SIGN IN"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_bg" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5" />
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="148dp"
-            android:layout_height="26dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="72dp"
             android:text="Don't have an account?"
-            app:layout_constraintBottom_toTopOf="@+id/topView4"
-            app:layout_constraintEnd_toStartOf="@+id/login_reg_btn"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintHorizontal_bias="0.086"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/login_btn"
+            app:layout_constraintWidth_percent="0.4" />
 
         <Button
             android:id="@+id/login_reg_btn"
-            android:layout_width="73dp"
-            android:layout_height="21dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="72dp"
+
             android:background="#EBEAE8"
             android:text="Sign Up"
-            app:layout_constraintBottom_toTopOf="@+id/topView4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintHorizontal_bias="0.815"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_btn"
-            app:layout_constraintVertical_bias="0.482" />
+            app:layout_constraintWidth_percent="0.3" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cstLyViewBottom"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.025"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="1.0">
 
         <View
             android:id="@+id/topView4"
             android:layout_width="match_parent"
-            android:layout_height="22dp"
+            android:layout_height="match_parent"
             android:background="#B2D0EB"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="-11dp"
-            tools:layout_editor_absoluteY="598dp" />
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
