--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -241,7 +241,7 @@
             android:layout_width="226dp"
             android:layout_height="55dp"
             android:layout_marginTop="40dp"
-            android:background="#E0A9F0C7"
+            android:background="@drawable/bnt_green"
             android:text="CANCEL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -252,7 +252,7 @@
             android:layout_width="226dp"
             android:layout_height="55dp"
             android:layout_marginTop="60dp"
-            android:background="#D6E7F3"
+            android:background="@drawable/bnt_blue"
             android:text="SING UP"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
