--- a/app/src/main/res/layout/activity_problem_step.xml
+++ b/app/src/main/res/layout/activity_problem_step.xml
@@ -68,10 +68,10 @@
 
     <Button
         android:id="@+id/problem_start_btn"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:background="#8fc4f7"
+        android:layout_width="170dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="84dp"
+        android:background="@drawable/bnt_blue"
         android:text="GO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
