--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/textview1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="64dp"
         android:layout_marginTop="148dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
