--- a/app/src/main/res/layout/activity_grammer_detail.xml
+++ b/app/src/main/res/layout/activity_grammer_detail.xml
@@ -55,6 +55,7 @@
         android:layout_height="290dp"
         android:layout_marginTop="144dp"
         android:background="@drawable/border_blue"
+        app:layout_constraintBottom_toTopOf="@+id/topView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,5 +90,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="330dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
